[package]
name = "winit_input_helper"
repository = "https://github.com/rukai/winit_input_helper"
version = "0.14.1"
edition = "2021"
authors = ["Rukai <rubickent@gmail.com>"]
license = "MIT"
description = "Processes winit events, allowing input state to be queried at any time."
keywords = ["winit", "input", "helper", "state", "cache"]
categories = ["game-engines", "os", "gui"]

[dependencies]
winit = { version = "0.28", default-features = false }

[dev-dependencies]
winit = { version = "0.28" }

[package.metadata.docs.rs]
features = ["winit/default"]
