[package]
name = "winit_input_helper"
repository = "https://github.com/rukai/winit_input_helper"
version = "0.15.2"
edition = "2021"
authors = ["Rukai <rubickent@gmail.com>"]
license = "MIT"
description = "Processes winit events, allowing input state to be queried at any time."
keywords = ["winit", "input", "helper", "state", "cache"]
categories = ["game-engines", "os", "gui"]

[dependencies]
winit = { version = "0.29", default-features = false }
web-time = "1.0"

[dev-dependencies]
winit = { version = "0.29" }

[package.metadata.docs.rs]
features = ["winit/default"]
