[package]
name = "winit_input_helper"
repository = "https://github.com/rukai/winit_input_helper"
version = "0.16.0"
edition = "2021"
authors = ["Rukai <rubickent@gmail.com>"]
license = "MIT"
description = "Processes winit events, allowing input state to be queried at any time."
keywords = ["winit", "input", "helper", "state", "cache"]
categories = ["game-engines", "os", "gui"]

[dependencies]
winit = { version = "0.30", default-features = false }
web-time = "1.0"

[dev-dependencies]
winit = { version = "0.30" }
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
env_logger = "0.11"

[package.metadata.docs.rs]
features = ["winit/default"]

[workspace]
members = [
    "run-wasm",
]
